--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* global css -- add here */
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
